--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,17 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.suo
+*.dll
+*.svg
+*.exe
+bin/voronoiNew.exp
+*.lib
+*.obj
+bin/data/over.png
+*.pdb
+obj/Release/voronoiNew.tlog/CL.command.1.tlog
+*.log
+*.tlog
+obj/Release/voronoiNew.vcxprojResolveAssemblyReference.cache
+*.sdf
